--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </main>
 
   <script>
-    // ▼ ポケモンデータ（睡眠タイプなし）
+    // ▼ ポケモンデータ
     const pokemonData = [
       {
         name: "フシギバナ",
@@ -456,13 +456,13 @@
     const trace = {
       x: pokemonData.map(p => p.workTimeSec),
       y: pokemonData.map(p => p.ingredientRate),
-      // textをカスタムデータとして使用
+      // textにポケモン名を設定し、クリックイベントでこの値を利用する
       text: pokemonData.map(p => p.name),
-      customdata: pokemonData.map((_, index) => index),
       mode: "markers+text",
       textposition: "top center",
       type: "scatter",
       marker: { size: 10 },
+      // ホバーテンプレートの設定（クリックイベントには影響しない）
       hovertemplate:
         "<b>%{text}</b><br>" +
         "お手伝い時間: %{x} 秒<br>" +
@@ -480,6 +480,7 @@
       displaylogo: false
     };
 
+    // ▼ Plotlyグラフの描画とイベント設定
     Plotly.newPlot("chart", [trace], layout, config).then(() => {
       const card = document.getElementById("pokemon-card");
       const chartEl = document.getElementById("chart");
@@ -487,11 +488,12 @@
       // 初期表示：1匹目
       renderPokemonCard(pokemonData[0]);
 
-      // クリックした点の index から、そのポケモンを取り出してカード表示
+      // クリックイベントの設定
       chartEl.on("plotly_click", (event) => {
         const pt = event.points[0];
 
-        // 修正済: クリックされた点のラベル (text) を使って
+        // 🚨 修正ロジック: クリックされた点のラベル (text = ポケモン名) を使って
+        // pokemonData から対応するポケモン情報を検索する
         const pokemonName = pt.text.trim();
         const pokemon = pokemonData.find(p => p.name === pokemonName);
 
@@ -503,15 +505,16 @@
       });
 
 
+      // ポケモン情報カードの描画関数
       function renderPokemonCard(p) {
         let ingredientsIcons = "";
         
-        // 修正: テンプレートリテラルでHTMLを構築
+        // 🚨 修正済み: テンプレートリテラル（バッククォート ``）を正しく使用
         if (p.ingredients.length > 0) {
           ingredientsIcons = `
             <p style="margin:4px 0;">
               ${p.ingredients.map(i => 
-                // 修正: map内のHTMLもテンプレートリテラルで記述
+                // 修正済み: map内のHTMLもテンプレートリテラルで記述
                 `<img src="${i.icon}" alt="${i.label}" class="ingredient-icon">`
               ).join("")}
             </p>
@@ -521,7 +524,7 @@
             '<p style="margin:4px 0;">食材：任意で変更可能</p>';
         }
 
-        // 修正: テンプレートリテラルでHTMLを構築
+        // 🚨 修正済み: テンプレートリテラルでHTMLを構築
         card.innerHTML = `
           <div class="card-inner">
             <img src="${p.sprite}" alt="${p.name}" class="pokemon-sprite">
