--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
             height: 85vh; 
             margin: 20px auto 0 auto;
         }
-        /* ★修正ポイント★: グラフの縦横比をスマホで見やすく調整（CSSで強制的な縦長を防ぐ） */
+        /* グラフの縦横比をスマホで見やすく調整 */
         .scatter-plot {
             width: 100%;
             height: 100%;
-            /* スマホで横幅に収まりやすくするための設定 */
             touch-action: manipulation;
         }
 
@@ -58,7 +57,7 @@
 
         /* --- 詳細情報カード（カスタムツールチップ）のスタイル --- */
         #detail-card {
-            /* position: absolute; は維持 */
+            /* JavaScriptで位置を設定するため absolute は維持 */
             position: absolute; 
             background-color: #ffffff;
             border: 2px solid #333;
@@ -66,12 +65,11 @@
             padding: 15px;
             box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
             z-index: 100;
-            /* ★修正ポイント★: タップ操作に対応するため pointer-events: none; を削除 (JSで非表示時に制御) */
             display: none;
-            max-width: 200px;
+            /* ★修正ポイント★: カードの最大幅を小さめに設定（端末サイズの25%程度） */
+            max-width: 200px; 
             font-family: sans-serif;
         }
-        /* (その他カード内のスタイルは変更なし) */
         #detail-card h3 {
             margin-top: 0;
             color: #2a6496;
