--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
         /* グラフコンテナの親要素 */
         #plot-container {
             width: 95vw;
-            height: 85vh; 
+            /* ★重要修正 4★: グラフの高さを下げ、横長に見えるように調整 (85vh -> 65vh) */
+            height: 65vh; 
             margin: 20px auto 0 auto;
         }
         /* グラフの縦横比をスマホで見やすく調整 */
         .scatter-plot {
             width: 100%;
             height: 100%;
-            touch-action: manipulation;
+            /* 1本指スライド（パン）を可能にするため、ブラウザネイティブのズームを制御 */
+            touch-action: pan-y; 
         }
 
         /* --- タブスタイリング (変更なし) --- */
@@ -57,7 +59,6 @@
 
         /* --- 詳細情報カード（カスタムツールチップ）のスタイル --- */
         #detail-card {
-            /* JavaScriptで位置を設定するため absolute は維持 */
             position: absolute; 
             background-color: #ffffff;
             border: 2px solid #333;
@@ -66,7 +67,6 @@
             box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
             z-index: 100;
             display: none;
-            /* ★修正ポイント★: カードの最大幅を小さめに設定（端末サイズの25%程度） */
             max-width: 200px; 
             font-family: sans-serif;
         }
